--- a/requirements.txt
+++ b/requirements.txt
@@ -137,3 +137,19 @@ wmctrl==0.5
     # via pdbpp
 zipp==3.17.0
     # via importlib-metadata
+
+ale_py==0.7.5
+bambi==0.13.0
+gym==0.21.0
+gymnasium==0.29.1
+mabwiser==2.7.1
+matplotlib==3.6.2
+mlflow==2.9.2
+numpy==1.23.4
+pandas==1.5.1
+plotly==5.10.0
+scikit_learn==1.1.3
+scipy==1.11.4
+seaborn==0.13.1
+streamlit==1.30.0
+vowpalwabbit==9.9.0
